<resources>
    <string name="app_name" translatable="false">NewsApp</string>
    <string name="disclaimer" translatable="false">© 2018 Rina Sergeeva</string>
    <string name="keyInfo_Android">Beginning Android developer</string>
    <string name="keyInfo_Study">MTUCI student</string>
    <string name="description">At the moment Rina is a third-year student of the Moscow
        Technical University of Communications and Informatics. She has started studying
        Android development a few months ago. Previously, she got acquainted with other
        branches of programming, but she is mostly interested in android development now. </string>
    <string name="feedback">Enter a message…</string>
    <string name="btn_sendMessage">send message</string>
    <string name="address">rina_sergeeva@bk.ru</string>
    <string name="chooser">Email apps</string>
    <string name="toast">Choose app…</string>
    <string name="about">About</string>
    <string name="title" translatable="false">Title</string>
    <string name="category" translatable="false">Category</string>
    <string name="preview_text" translatable="false">Preview text\n…\n…\n…</string>
    <string name="published_data" translatable="false">Published data</string>
    <string name="full_text" translatable="false">Full text\n...\n...\n...\n...\n...</string>
    <string name="tv_network_error">Network error</string>
    <string name="btn_repeat">Repeat</string>
    <string name="category_home">Home</string>
    <string name="welcome">Welcome!</string>
    <string name="default_search">home</string>
    <string name="vk_url">"https://vk.com/sergeeva_rina7</string>
    <string name="git_url">https://github.com/RinaBrisk</string>
    <string name="tg_url">https://web.telegram.org/#/im</string>
    <string name="api_key">y8sH4kt9gZBVJyEoB2DvUHmHyT97zAih</string>

    <string-array name="newsCategory">

        <item>Home</item>
        <item>World</item>
        <item>National</item>
        <item>Politics</item>
        <item>Business</item>
        <item>Technology</item>
        <item>Science</item>
        <item>Health</item>
        <item>Sports</item>
        <item>Arts</item>
        <item>Books</item>
        <item>Movies</item>
        <item>Theater</item>

    </string-array>

</resources>
