<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NewsList"
    android:id="@+id/card_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    card_view:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_category"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/category"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize_category" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_width="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_preview_text"
                    android:layout_height="@dimen/height_preview_text"
                    android:layout_width="match_parent"
                    android:maxLines="4"
                    android:text="@string/preview_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize_preview_text" />

            </LinearLayout>

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/heading_image"
                android:layout_gravity="top"
                android:layout_height="@dimen/heading_image"
                android:layout_marginStart="@dimen/marginStart_headingImage"
                android:layout_weight="1"
                android:layout_width="@dimen/heading_image"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_published_data"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/paddingTop_publishedData"
            android:text="@string/published_data"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/textSize_published_data" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

